# HelloVTK

./: CMakeLists.txt  README.md  SetupMake.sh  SetupVS22.ps1  SetupXcode.sh  vcpkg.json
source/: main.cxx
